[gd_scene load_steps=6 format=3 uid="uid://dy0dg87mqaucl"]

[ext_resource type="PackedScene" uid="uid://c72tadrko6hg0" path="res://scenes/menu/buttons/ButtonWrapper/button_wrapper.tscn" id="1_qxtxi"]
[ext_resource type="PackedScene" uid="uid://cnlm6ho48juqv" path="res://scenes/menu/main_menu/main_menu.tscn" id="2_dobb5"]
[ext_resource type="PackedScene" uid="uid://b2kq5erlme841" path="res://scenes/menu/settings_menu/settings_menu.tscn" id="2_qag8e"]
[ext_resource type="Script" path="res://scenes/controller/menu_music.gd" id="3_5vsym"]
[ext_resource type="Script" path="res://scenes/controller/scene_dock.gd" id="3_u4nt1"]

[node name="BaseController" type="Node"]

[node name="SettingsButton" parent="." instance=ExtResource("1_qxtxi")]
script = null

[node name="SettingsMenu" parent="." instance=ExtResource("2_qag8e")]

[node name="MenuMusic" type="AudioStreamPlayer2D" parent="."]
script = ExtResource("3_5vsym")

[node name="SceneDock" type="Node" parent="."]
script = ExtResource("3_u4nt1")
first_scene = ExtResource("2_dobb5")

[connection signal="button_down" from="SettingsButton" to="SettingsMenu" method="_on_settings_switched"]
[connection signal="settings_switched" from="SettingsMenu" to="SceneDock" method="_on_settings_switched"]
[connection signal="level_ended" from="SceneDock" to="MenuMusic" method="_on_scene_dock_level_ended"]
[connection signal="level_started" from="SceneDock" to="MenuMusic" method="_on_scene_dock_level_started"]
